Demo/ingress1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello-deploy
  labels:
   app: nginx-hello-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-hello-pods
  template:
    metadata:
      labels:
        app: nginx-hello-pods
    spec:
      containers:
      - name: nginx-hello
        image: 'nginxdemos/hello'
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-service
  labels:
    app: nginx-hello-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-hello-pods
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "myhost.local"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service: 
              name: nginx-hello-service
              port: 
                number: 80
